# blog-viaje

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  docker-compose.yml  pytest.ini
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 450e59d38817_registro_de_intentos_de_login_login_.py  53117a0e8891_usuarios_y_sesiones.py  cbbc0ac46e0c_modelo_de_datos_de_contenido.py  e04bab145e52_bloqueo_de_cuentas_account_locks.py
backend/app/: main.py
backend/app/api/: admin_photos.py  admin_topics.py  admin_trips.py  auth.py  deps.py  health.py  photos.py  trips.py
backend/app/cli/: main.py
backend/app/core/: config.py  csrf.py  security.py  slugify.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  account_lock.py  audit_log.py  login_attempt.py  photo.py  session.py  tag.py  topic.py  trip.py  user.py
backend/app/services/: auth.py  html_sanitizer.py  photo_storage.py  rescue_cli.py
backend/tests/: conftest.py  test_api_admin_photos.py  test_api_admin_topics.py  test_api_admin_trips.py  test_api_auth.py  test_api_photos.py  test_api_trips.py  test_auth_service.py  test_cli.py  test_config.py  test_csrf.py  test_db.py  test_health.py  test_html_sanitizer.py  test_models.py  test_photo_storage.py  test_security.py
deploy/: README.md  docker-compose.yml
docs/: TRACEABILITY.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
plan/: PLAN-R1.md
specs/: SPEC-MASTER.md  SPEC-R1.md  SPEC-R2.md  SPEC-R3.md
tasks/: README.md  (+1 more)
(+30 files in other folders)
