[project]
name = "bitacora-backend"
version = "0.1.0"
description = "API, worker y CLI de rescate de Bitácora"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[project.scripts]
bitacora-cli = "app.cli.main:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
markers = [
    "spec(id): marca el test como verificación de un requisito RF/RNF (trazabilidad SDD)",
]

[tool.coverage.run]
branch = true
source = ["app"]
